- fixed: background on small pages and update error on page change

--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,8 @@ h2 {
 
 
 body {
-  position: relative;
+  position: absolute;
+  min-height: 100%;
   line-height: 1.3;
 }
 
